# app/api/endpoints/v1/api_client.py
@@ -3,7 +3,7 @@ from typing import Union
 from fastapi import APIRouter
 
 from app.schemas.real_estate import Client
-from app.schemas.tools import LookupRequest, PreferencesRequest, ClientLookupRequest
+from app.schemas.tools import ClientLookupRequest, ClientPreferencesRequest
 from app.services.client_service import ClientService
 
 client_router = APIRouter()
@@ -11,16 +11,18 @@ client_router = APIRouter()
 
 @client_router.post("/client_lookup", operation_id="client_lookup", response_model=Union[str, Client])
 def client_lookup(request: ClientLookupRequest):
-    client = ClientService().lookup(whatsapp_number=request.whatsapp_number, real_estate_agent_id=request.real_estate_agent_id)
+    client = ClientService().lookup(whatsapp_number=request.client_whatsapp_number,
+                                    real_estate_agent_id=request.real_estate_agent_id)
     return client
 
 
 @client_router.post("/save_client_memory_preferences", operation_id="save_client_memory_preferences",
                     response_model=str)
-def save_client_memory_preferences(request: PreferencesRequest):
-    client = ClientService().save_client_memory(whatsapp_number=request.whatsapp_number,
+def save_client_memory_preferences(request: ClientPreferencesRequest):
+    client = ClientService().save_client_memory(client_id=request.client_id,
                                                 parameter_name=request.parameter_name,
-                                                parameter_value_description=request.parameter_value_description)
+                                                parameter_value_description=request.parameter_value_description,
+                                                real_estate_agent_id=request.real_estate_agent_id)
 
     return client
 
